ci: playwright をdevDepndenciesに追加
bin にコマンドがないため

--- a/packages/zenn-wysiwyg-editor/package.json
+++ b/packages/zenn-wysiwyg-editor/package.json
@@ -93,7 +93,8 @@
     "typescript": "~5.8.3",
     "vitest": "^3.2.4",
     "vitest-browser-react": "^1.0.1",
-    "zenn-markdown-html": "workspace:zenn-markdown-html"
+    "zenn-markdown-html": "workspace:zenn-markdown-html",
+    "@playwright/test": "^1.52.0"
   },
   "peerDependencies": {
     "@tiptap/pm": "^3.6.0",
