--- a/packages/zenn-web/package.json
+++ b/packages/zenn-web/package.json
@@ -19,7 +19,8 @@
     "sonner": "^2.0.7",
     "zenn-markdown-html": "workspace:*",
     "zenn-model": "workspace:*",
-    "zenn-wysiwyg-editor": "workspace:*"
+    "zenn-wysiwyg-editor": "workspace:*",
+    "zenn-embed-elements": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
@@ -32,7 +33,6 @@
     "globals": "^16.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.6",
-    "zenn-embed-elements": "workspace:*"
+    "vite": "^7.1.6"
   }
 }
