--- a/packages/zenn-wysiwyg-editor/.eslintrc.yaml
+++ b/packages/zenn-wysiwyg-editor/.eslintrc.yaml
@@ -6,8 +6,12 @@ extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
   - prettier
+  - plugin:react/recommended
+  - plugin:react-hooks/recommended
 rules:
   '@typescript-eslint/explicit-module-boundary-types': off
   '@typescript-eslint/no-var-requires': off
   '@typescript-eslint/ban-ts-comment': off
   '@typescript-eslint/no-explicit-any': off
+  'react/react-in-jsx-scope': off
+  'react/display-name': off
