--- a/packages/zenn-wysiwyg-editor/package.json
+++ b/packages/zenn-wysiwyg-editor/package.json
@@ -83,6 +83,8 @@
     "@vitest/browser": "^3.2.4",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.1.6",
     "happy-dom": "^18.0.1",
     "npm-run-all": "^4.1.5",
@@ -93,9 +95,9 @@
     "typescript": "~5.8.3",
     "vitest": "^3.2.4",
     "vitest-browser-react": "^1.0.1",
-    "zenn-markdown-html": "workspace:*",
+    "zenn-content-css": "workspace:*",
     "zenn-embed-elements": "workspace:*",
-    "zenn-content-css": "workspace:*"
+    "zenn-markdown-html": "workspace:*"
   },
   "peerDependencies": {
     "@tiptap/core": "^3.6.0",
